Fix main layout issue (centering😑)

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Tanha, sans-serif;
+}
+
 body, html {
   height: 100%;
-  margin: 0;
-  font-family: Tanha, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
+  min-height: 100vh;
 }
 
 h1, h2, h3, h4, h5, h6, span, button, input {
   font-family: Tanha, sans-serif;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0 1.5rem;
 }
