--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,3 +12,7 @@ body {
   padding: 0;
   direction: rtl;
 }
+
+.toast {
+  font-family: Tanha, sans-serif;
+}
