--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,6 +1,5 @@
 .container {
   padding: 20px;
-  margin: 0 24px;
   max-width: 100%;
   background: #fbff004e;
   backdrop-filter: blur(15px);
