--- a/frontend/src/styles/Register.css
+++ b/frontend/src/styles/Register.css
@@ -2,11 +2,9 @@
   background: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(10px);
   border-radius: 16px;
-  padding: 40px 30px;
+  padding: 36px 28px;
   box-shadow: 0 8px 32px rgba(0,0,0,0.1);
-  width: 100%;
-  max-width: 500px;
-  box-sizing: border-box;
+  width: 80%;
   text-align: center;
 }
 
@@ -16,10 +14,13 @@
   font-size: 28px;
 }
 
+.register-container form {
+  min-width: 100%;
+}
+
 .register-container input {
   width: 100%;
   padding: 12px 15px;
-  margin-bottom: 15px;
   border: none;
   border-radius: 10px;
   font-size: 16px;
@@ -41,6 +42,7 @@
   background-color: #d0c717;
   color: white;
   font-size: 16px;
+  margin-top: 16px;
   cursor: pointer;
   transition: all 0.3s ease;
 }
@@ -60,9 +62,23 @@
   text-decoration: underline;
 }
 
-@media (max-width: 400px) {
+.inputContainer {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: 8px;
+  width: 100%;
+}
+
+.error {
+  color: #c60000;
+}
+
+@media (max-width: 460px) {
   .register-container {
-    padding: 30px 20px;
+    padding: 28px 20px;
+    min-width: 100%;
   }
 
   .register-container h2 {
